--- a/index.html
+++ b/index.html
@@ -30,7 +30,11 @@
       </header>
 
       <section id="about" class="space-y-2">
-        <img src="src/asset/profile.jpg" class="h-30 w-30 rounded-lg" alt="" />
+        <img
+          src="src/asset/profile.jpg"
+          class="h-30 w-30 rounded-lg"
+          alt="Profile Picture"
+        />
         <h3 class="text-2xl font-bold">
           Hello, I am
           <span
@@ -68,42 +72,42 @@
             <img
               src="https://cdn.worldvectorlogo.com/logos/html-1.svg"
               class="w-15 h-15 inline-block mx-8"
-              alt=""
+              alt="html logo"
             />
             <img
               src="https://cdn.worldvectorlogo.com/logos/css-3.svg"
               class="w-15 h-15 inline-block mx-8"
-              alt=""
+              alt="css logo"
             />
             <img
               src="https://cdn.worldvectorlogo.com/logos/tailwind-css-2.svg"
               class="w-15 h-15 inline-block mx-8"
-              alt=""
+              alt="tailwind logo"
             />
             <img
               src="https://cdn.worldvectorlogo.com/logos/javascript-r.svg"
               class="w-15 h-15 inline-block mx-8"
-              alt=""
+              alt="js logo"
             />
             <img
               src="https://cdn.worldvectorlogo.com/logos/alpine-13.svg"
               class="w-15 h-15 inline-block mx-8"
-              alt=""
+              alt="alpine js logo"
             />
             <img
               src="https://cdn.worldvectorlogo.com/logos/bun-1.svg"
               class="w-15 h-15 inline-block mx-8"
-              alt=""
+              alt="bun logo"
             />
             <img
               src="https://cdn.prod.website-files.com/61c02e339c11997e6926e3d9/61c02e339c1199981026e3e6_5d7b5dbf3a8c25c8074d19ba_1280px-Npm-logo.svg.png"
               class="h-15 inline-block mx-8"
-              alt=""
+              alt="npm logo"
             />
             <img
               src="https://cdn.worldvectorlogo.com/logos/git-icon.svg"
               class="h-15 inline-block mx-8"
-              alt=""
+              alt="git logo"
             />
           </marquee>
         </div>
@@ -121,11 +125,11 @@
           <div
             class="bg-zinc-400 p-3 rounded-lg hover:bg-zinc-900 group flex flex-col items-center space-y-3 transition duration-150"
           >
-            <a href="">
+            <a href="https://www.linkedin.com/in/djibraniyuda/">
               <img
                 src="https://cdn.worldvectorlogo.com/logos/linkedin-icon-2.svg"
                 class="h-15 w-15"
-                alt=""
+                alt="LinkedIn"
               />
             </a>
             <p
@@ -137,11 +141,11 @@
           <div
             class="bg-zinc-400 p-3 rounded-lg hover:bg-zinc-900 group flex flex-col items-center space-y-3 transition duration-150"
           >
-            <a href="">
+            <a href="https://github.com/YudaClairee">
               <img
                 src="https://cdn.worldvectorlogo.com/logos/github-icon-1.svg"
                 class="h-15 w-15"
-                alt=""
+                alt="Github"
               />
             </a>
             <p class="text-zinc-800 group-hover:text-zinc-300">YudaClairee</p>
@@ -149,11 +153,11 @@
           <div
             class="bg-zinc-400 p-3 rounded-lg hover:bg-zinc-900 group flex flex-col items-center space-y-3 transition duration-150"
           >
-            <a href="">
+            <a href="https://www.instagram.com/djibyudaaa/">
               <img
                 src="https://cdn.worldvectorlogo.com/logos/instagram-2016-5.svg"
                 class="h-15 w-15"
-                alt=""
+                alt="Instagram"
               />
             </a>
             <p class="text-zinc-800 group-hover:text-zinc-300">@djibyudaaa</p>
@@ -161,11 +165,11 @@
           <div
             class="bg-zinc-400 p-3 rounded-lg hover:bg-zinc-900 group flex flex-col items-center space-y-3 transition duration-150"
           >
-            <a href="">
+            <a href="https://x.com/ucupudut">
               <img
                 src="https://cdn.worldvectorlogo.com/logos/x-2.svg"
                 class="h-15 w-15"
-                alt=""
+                alt="X"
               />
             </a>
             <p class="text-zinc-800 group-hover:text-zinc-300">@ucupudut</p>
