--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
         </h3>
         <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6">
           <div
-            class="bg-zinc-400 p-4 rounded-md hover:scale-105 transition duration-150"
+            class="bg-zinc-400 p-4 rounded-md hover:scale-105 transition duration-150 space-y-1.5"
           >
             <img class="rounded w-full" src="src/asset/digivathon.jpg" alt="" />
             <h3
@@ -199,7 +199,7 @@
             </p>
           </div>
           <div
-            class="bg-zinc-400 p-4 rounded-md hover:scale-105 transition duration-150"
+            class="bg-zinc-400 p-4 rounded-md hover:scale-105 transition duration-150 space-y-1.5"
           >
             <img class="rounded" src="src/asset/syukurin.png" alt="" />
             <h3
@@ -213,7 +213,7 @@
             </p>
           </div>
           <div
-            class="bg-zinc-400 p-4 rounded-md hover:scale-105 transition duration-150"
+            class="bg-zinc-400 p-4 rounded-md hover:scale-105 transition duration-150 space-y-1.5"
           >
             <img class="rounded" src="src/asset/dleath.jpg" alt="" />
             <h3
